--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -7,8 +7,8 @@
     --accent1-color: #107, 109, 126;
     --accent2-color: #28, 31, 98;
 
-    --heading-font: 'Rocksalt', cursive; 
-    --paragraph-font: 'Rocksalt', cursive;
+    --heading-font: 'Rock Salt', cursive; 
+    --paragraph-font: 'Rock Salt', cursive;
 
     --nav-background-color: var(--accent2-color);
     --nav-link-color: blue;
