--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,13 @@
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+
+}
+
+
 nav {background-color: steelblue;
   padding: 10px;
 }
@@ -42,4 +52,28 @@ footer{
   margin-top: 1em;
   border-top: 1px solid #000;
   text-align: center;
+}
+
+/* Class Selectors */
+
+.box {
+  margin: 1rem;
+  border: 1px solid rgba(55, 49, 230, 0.1);
+  padding: 1rem;
+  background-color: #b7b5e6;
+  color: #b9790c;
+}
+
+main img {
+  float: right;
+  
+
+
+}
+
+aside h2 {
+   position: relative;
+   top: 0px
+   
+
 }
