--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,6 +30,7 @@ p {
   padding: 10px;  
 }
 aside {
+  position: relative; 
   margin: 1em;
   border: 1px solid rgba(0, 0, 0, 0.2); /* 1 */
   padding: 1em;
@@ -61,7 +62,7 @@ footer{
   border: 1px solid rgba(55, 49, 230, 0.1);
   padding: 1rem;
   background-color: #b7b5e6;
-  color: #b9790c;
+  color: #f0c986;
 }
 
 main img {
@@ -72,7 +73,8 @@ main img {
 }
 
 aside h2 {
-   position: relative;
+   position: absolute;
    top: 50px;
+   left: 325px;
 
 }
