--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,15 +9,26 @@
 
 
 nav {background-color: steelblue;
-  padding: 10px;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 nav a { 
-  color: white;
+  color: black;
   display: block;
-  padding: 20px;
+  padding: 0.5rem;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 700; 
+  
+
+
 }
 h1 { 
   color: steelblue;
+  border-bottom: black;
+ 
 }
 img { 
   width: 150px;
@@ -29,15 +40,10 @@ img {
 p {
   padding: 10px;  
 }
-aside {
-  position: relative; 
-  margin: 1em;
-  border: 1px solid rgba(0, 0, 0, 0.2); /* 1 */
-  padding: 1em;
-  background-color: #eee;
-  color: #333;
-  text-align: center;
-}
+
+
+
+
 aside img {
   width: 200px;
   height: auto;
@@ -62,19 +68,61 @@ footer{
   border: 1px solid rgba(55, 49, 230, 0.1);
   padding: 1rem;
   background-color: #b7b5e6;
-  color: #f0c986;
+  color: black;
 }
 
 main img {
   float: right;
+  margin: 1rem;
   
 
 
 }
 
 aside h2 {
-   position: absolute;
-   top: 50px;
-   left: 325px;
+  /* display: grid;
+  justify-content: center; 
+  align-items: center; */
+
+  
+  
+  
+  position: absolute;
+   top: 30px;
+   left: 135px;
+ 
+
+}
+
+header, .grid, footer {
+
+  max-width: 840px;
+  margin: auto 
+
+}
+.grid {
+
+  display: grid;
+  align-items: center;
+
+}
+
+aside {
+  width: 20rem;
+  position: relative;
+  grid-column: 1/2;
+  grid-row: 1/2;
+  margin: 1em;
+  border: 1px solid rgba(0, 0, 0, 0.2); /* 1 */
+  padding: 1em;
+  background-color: #e00b0b;
+  color: #333;
+  text-align: center;
+  
+}
+
+main {
+grid-column: 2/3;
+margin: 1rem;
 
 }
