--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -105,7 +105,7 @@ a {
  header {
    margin: auto;
    display: grid;
-   grid-template-columns: 120px, 1fr, 2fr;
+   grid-template-columns: 120px 1fr 2fr;
    align-items: center;
    border-bottom: 1px solid black;
    width: 100%;
